[project]
name = "act-plus-plus"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "diffusers>=0.29.0",
    "dm-control==1.0.14",
    "einops",
    "h5py",
    "ipython",
    "matplotlib",
    "mujoco==2.3.7",
    "numpy",
    "opencv-python",
    "packaging",
    "pandas",
    "pyqt6",
    "pyquaternion",
    "robomimic",
    "seaborn",
    "torch",
    "torchvision>=0.22.0",
    "wandb",
]

[tool.uv.sources]
robomimic = { git = "https://github.com/ncihnegn/robomimic", branch = "r2d2" }
